--- a/OPENPAAS-IEDA-COMMON-SERVICE/src/main/resources/messages/messages.properties
+++ b/OPENPAAS-IEDA-COMMON-SERVICE/src/main/resources/messages/messages.properties
@@ -95,9 +95,11 @@ iaas.accountManagement.connect.code.exception=accountManagement.connect.code.exc
 iaas.accountManagement.connect.message.exception=존재하지 않는 계정 입니다.
 iaas.aws.account.exist.message.exception=잘못된 AWS 계정이 존재합니다. 계정 관리에서 확인해주세요.
 iaas.openstack.account.exist.message.exception=잘못된 Openstack 계정이 존재합니다. 계정 관리에서 확인해주세요.
+iaas.azure.account.exist.message.exception=잘못된 Azure 계정이 존재합니다. 계정 관리에서 확인해주세요.
 
 aws.accountManagement.connect.message.exception=존재하지 않는 AWS 계정 입니다.
 openstack.accountManagement.connect.message.exception=존재하지 Openstack 않는 계정 입니다.
+azure.accountManagement.connect.message.exception=존재하지 Azure 않는 계정 입니다.
 
 iaas.configMgnt.conflict.code.exception=configMgnt.conflict.code.exception
 iaas.configMgnt.conflict.message.exception=중복된 환경 설정 정보입니다.
